@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: makebearoff.c,v 1.27 2003/08/13 11:52:28 Superfly_Jon Exp $
+ * $Id: makebearoff.c,v 1.28 2003/12/29 20:16:57 uid65656 Exp $
  */
 
 #include "config.h"
@@ -36,6 +36,17 @@
 #include "i18n.h"
 #include "bearoff.h"
 
+#if WIN32
+#include <windows.h>
+#include <commctrl.h>
+#define DLG_MAKEBEAROFF 100
+BOOL CALLBACK
+DlgProc (HWND hwnd, UINT Message, WPARAM wParam, LPARAM lParam);
+
+HWND hdlg;
+int CancelPressed = FALSE;
+#endif
+
 typedef struct _xhashent {
   void *p;
   unsigned int iKey;
@@ -54,6 +65,35 @@ int exsExport;
 int ap;
 /* end ugly fixes */
 
+#if WIN32
+static void
+dlgprintf(int id, const char *fmt, ... ){
+
+    va_list val;
+    char buf[256]; /* FIXME allocate with malloc */
+    
+    va_start( val, fmt );
+    vsprintf(buf, fmt, val);
+    SendDlgItemMessage(hdlg, id, WM_SETTEXT, 0, (LPARAM) buf);
+    
+    va_end( val );
+}
+#endif
+
+static void dsplerr ( const char *fmt, ... ){
+
+    va_list val;
+
+    char buf[256]; /* FIXME allocate with malloc */
+    va_start( val, fmt );
+    vsprintf(buf, fmt, val);
+#if WIN32
+    MessageBox (NULL, buf, "Makebearoff", MB_ICONERROR | MB_OK);
+#else
+    fprintf( stderr, "%s", buf);
+#endif
+    va_end( val );
+}
 
 static long cLookup;
 
@@ -68,12 +108,13 @@ XhashPosition ( xhash *ph, const int iKey ) {
 static void
 XhashStatus ( xhash *ph ) {
 
+#if !WIN32
   fprintf ( stderr, "Xhash status:\n" );
   fprintf ( stderr, "Size:    %d elements\n", ph->nHashSize );
   fprintf ( stderr, "Queries: %lu (hits: %ld)\n", ph->nQueries, ph->nHits );
   fprintf ( stderr, "Entries: %lu (overwrites: %lu)\n",
             ph->nEntries, ph->nOverwrites );
-
+#endif
 
 }
 
@@ -193,7 +234,7 @@ OSLookup ( const unsigned int iPos,
       if ( errno )
         perror ( "output file" );
       else
-        fprintf ( stderr, "error reading output file\n" );
+        dsplerr (  "error reading output file\n" );
       exit(-1);
     }
 
@@ -232,7 +273,7 @@ OSLookup ( const unsigned int iPos,
       if ( errno )
         perror ( "reading temp file" );
       else
-        fprintf ( stderr, "error reading temp file" );
+        dsplerr ( "error reading temp file" );
       exit(-1);
     }
     
@@ -264,7 +305,7 @@ OSLookup ( const unsigned int iPos,
 
     if ( fseek ( pfOutput, 
                  40 + iPos * ( fGammon ? 128 : 64 ), SEEK_SET ) < 0 ) {
-      fprintf ( stderr, "error seeking in pfOutput\n" );
+      dsplerr (  "error seeking in pfOutput\n" );
       exit(-1);
     }
 
@@ -272,7 +313,7 @@ OSLookup ( const unsigned int iPos,
 
     if ( fread ( ac, 1, fGammon ? 128 : 64, pfOutput ) < 
          ( fGammon ? 128 : 64 ) ) {
-      fprintf ( stderr, "error readung from pfOutput\n" );
+      dsplerr (  "error readung from pfOutput\n" );
       exit(-1);
     }
 
@@ -289,7 +330,7 @@ OSLookup ( const unsigned int iPos,
     /* position cursor at end of file */
 
     if ( fseek ( pfOutput, 0L, SEEK_END ) < 0 ) {
-      fprintf ( stderr, "error seeking to end!\n" );
+      dsplerr (  "error seeking to end!\n" );
       exit(-1);
     }
 
@@ -608,11 +649,29 @@ generate_os ( const int nOS, const int fHeader,
   time_t t;
   unsigned int npos;
   char szTmp[ 11 ];
+#if WIN32
+  HINSTANCE hInstance = (HINSTANCE) GetModuleHandle(NULL);
+  HWND hwndPB;
+  if( hdlg != NULL)
+    ShowWindow(hdlg, SW_SHOW);
+
+  INITCOMMONCONTROLSEX InitCtrlEx;
+
+  InitCtrlEx.dwSize = sizeof(INITCOMMONCONTROLSEX);
+  InitCtrlEx.dwICC  = ICC_PROGRESS_CLASS;
+  InitCommonControlsEx(&InitCtrlEx);
+
+  hwndPB = CreateWindowEx(0, PROGRESS_CLASS, NULL, WS_CHILD | WS_VISIBLE,
+		  12, 300, 470, 20, hdlg, NULL, hInstance, NULL);
+#endif
 
   /* initialise xhash */
 
+#if WIN32
+  dlgprintf(127, "Creating cache memory." );
+#endif
   if ( XhashCreate ( &h, nHashSize /  ( fGammon ? 128 : 64 ) ) ) {
-    fprintf ( stderr, _("Error creating xhash with %d elements\n"),
+    dsplerr (  _("Error creating xhash with %d elements\n"),
               nHashSize /  fGammon ? 128 : 64 );
     exit(2);
   }
@@ -623,12 +682,18 @@ generate_os ( const int nOS, const int fHeader,
 
   if ( fHeader ) {
     char sz[ 41 ];
+#if WIN32
+    dlgprintf(127, "Writing header information." );
+#endif
     sprintf ( sz, "gnubg-OS-%02d-15-%1d-%1d-0xxxxxxxxxxxxxxxxxxx\n", 
               nOS, fGammon, fCompress );
     fputs ( sz, output );
   }
 
   if ( fCompress ) {
+#if WIN32
+    dlgprintf(127, "Opening temporary file." );
+#endif
     time ( &t );
     sprintf ( szTmp, "t%06ld.bd", t % 100000 );
     if ( ! ( pfTmp = fopen ( szTmp, "w+b" ) ) ) {
@@ -644,6 +709,12 @@ generate_os ( const int nOS, const int fHeader,
   n = Combination ( nOS + 15, nOS );
   npos = 0;
   
+#if WIN32
+  SendMessage(hwndPB, PBM_SETRANGE, 0, MAKELPARAM(0, n / 100));
+  SendMessage(hwndPB, PBM_SETSTEP, (WPARAM) 1, 0);
+  dlgprintf(127, "Calculating bearoff data." );
+#endif
+
   for ( i = 0; i < n; ++i ) {
     
     if ( i )
@@ -653,9 +724,15 @@ generate_os ( const int nOS, const int fHeader,
       aus[  0 ] = 0xFFFF;
       aus[ 32 ] = 0xFFFF;
     }
-
-    if( !( i % 100 ) )
-      fprintf( stderr, "1:%d/%d        \r", i, n );
+#if WIN32
+    if (!((i+1) % 100))
+      SendMessage(hwndPB, PBM_STEPIT, 0, 0);
+    if (CancelPressed)
+      break;
+#else
+    if (!(i % 100))
+      fprintf (stderr, "1:%d/%d        \r", i, n);
+#endif
 
     WriteOS ( aus, fCompress, fCompress ? pfTmp : output );
     if ( fGammon )
@@ -672,6 +749,9 @@ generate_os ( const int nOS, const int fHeader,
 
     char ac[ 256 ];
     int n;
+#if WIN32
+    dlgprintf(127, "Rewriting to compressed database." );
+#endif
 
     /* write contents of pfTmp to output */
 
@@ -685,9 +765,12 @@ generate_os ( const int nOS, const int fHeader,
     unlink ( szTmp );
 
   }
-
+#if !WIN32
   putc ( '\n', stderr );
-  
+#else
+  dlgprintf(127, "Clearing cache memory." );
+#endif
+
   XhashStatus ( &h );
 
   XhashDestroy ( &h );
@@ -843,18 +926,48 @@ generate_nd ( const int nPoints,const int nHashSize, const int fHeader,
   float ar[ 4 ];
 
   xhash h;
+#if WIN32
+  HINSTANCE hInstance = (HINSTANCE) GetModuleHandle(NULL);
+  HWND hwndPB;
+  if( hdlg != NULL)
+    ShowWindow(hdlg, SW_SHOW);
+
+  INITCOMMONCONTROLSEX InitCtrlEx;
+
+  InitCtrlEx.dwSize = sizeof(INITCOMMONCONTROLSEX);
+  InitCtrlEx.dwICC  = ICC_PROGRESS_CLASS;
+  InitCommonControlsEx(&InitCtrlEx);
+
+  hwndPB = CreateWindowEx(0, PROGRESS_CLASS, NULL, WS_CHILD | WS_VISIBLE,
+		  12, 300, 470, 20, hdlg, NULL, hInstance, NULL);
+#endif
+
+  /* initialise xhash */
+  
+#if WIN32
+    dlgprintf(127, "Creating cache memory." );
+#endif
  
   if ( XhashCreate ( &h, nHashSize / ( 4 * sizeof ( float ) ) ) ) {
-    fprintf ( stderr, "Error creating cache\n" );
+    dsplerr (  "Error creating cache\n" );
     return;
   }
 
   XhashStatus ( &h );
 
   if ( fHeader ) {
+#if WIN32
+    dlgprintf(127, "Writing header information." );
+#endif
     sprintf ( sz, "gnubg-OS-%02d-15-1-0-1xxxxxxxxxxxxxxxxxxx\n", nPoints );
     fputs ( sz, output );
   }
+
+#if WIN32
+  SendMessage(hwndPB, PBM_SETRANGE, 0, MAKELPARAM(0, n / 100));
+  SendMessage(hwndPB, PBM_SETSTEP, (WPARAM) 1, 0);
+  dlgprintf(127, "Calculating bearoff data." );
+#endif
 
   for ( i = 0; i < n; ++i ) {
 
@@ -867,14 +980,20 @@ generate_nd ( const int nPoints,const int nHashSize, const int fHeader,
       WriteFloat ( ar[ j ], output );
 
     XhashAdd ( &h, i, ar, 16 );
-
-    if( !( i % 100 ) )
-      fprintf( stderr, "1:%d/%d        \r", i, n );
+#if WIN32
+    if (!((i+1) % 100))
+      SendMessage(hwndPB, PBM_STEPIT, 0, 0);
+#else
+    if (!(i % 100))
+      fprintf (stderr, "1:%d/%d        \r", i, n);
+#endif
 
   }
-
+#if !WIN32
   putc ( '\n', stderr );
-
+#else
+  dlgprintf(127, "Clearing cache memory." );
+#endif
   XhashStatus ( &h );
 
   XhashDestroy ( &h );
@@ -955,7 +1074,7 @@ TSLookup ( const int nUs, const int nThem,
       if ( errno )
         perror ( "temp file" );
       else
-        fprintf ( stderr, "error reading temp file\n" );
+        dsplerr (  "error reading temp file\n" );
       exit(-1);
   }
 
@@ -1162,6 +1281,21 @@ generate_ts ( const int nTSP, const int nTSC,
     FILE *pfTmp;
     time_t t;
     unsigned char ac[ 8 ];
+#if WIN32
+  HINSTANCE hInstance = (HINSTANCE) GetModuleHandle(NULL);
+  HWND hwndPB;
+  if( hdlg != NULL)
+    ShowWindow(hdlg, SW_SHOW);
+
+  INITCOMMONCONTROLSEX InitCtrlEx;
+
+  InitCtrlEx.dwSize = sizeof(INITCOMMONCONTROLSEX);
+  InitCtrlEx.dwICC  = ICC_PROGRESS_CLASS;
+  InitCommonControlsEx(&InitCtrlEx);
+
+  hwndPB = CreateWindowEx(0, PROGRESS_CLASS, NULL, WS_CHILD | WS_VISIBLE,
+		  12, 300, 470, 20, hdlg, NULL, hInstance, NULL);
+#endif
 
     time ( &t );
     sprintf ( szTmp, "t%06ld.bd", t % 100000 );
@@ -1172,8 +1306,12 @@ generate_ts ( const int nTSP, const int nTSC,
 
     /* initialise xhash */
     
+#if WIN32
+    dlgprintf(127, "Initialising xhash." );
+#endif
+    
     if ( XhashCreate ( &h, nHashSize /  ( fCubeful ? 8 : 2 ) ) ) {
-      fprintf ( stderr, _("Error creating xhash with %d elements\n"),
+      dsplerr (  _("Error creating xhash with %d elements\n"),
                 nHashSize /  fCubeful ? 8 : 2 );
       exit(2);
     }
@@ -1184,6 +1322,9 @@ generate_ts ( const int nTSP, const int nTSC,
 
     if ( fHeader ) {
       char sz[ 41 ];
+#if WIN32
+      dlgprintf(127, "Writing header information." );
+#endif
       sprintf ( sz, "gnubg-TS-%02d-%02d-%1dxxxxxxxxxxxxxxxxxxxxxxx\n", 
                 nTSP, nTSC, fCubeful );
       fputs ( sz, output );
@@ -1194,8 +1335,16 @@ generate_ts ( const int nTSP, const int nTSC,
 
     n = Combination ( nTSP + nTSC, nTSC );
     iPos = 0;
+    
+#if WIN32
+    SendMessage(hwndPB, PBM_SETRANGE, 0, MAKELPARAM(0, n ));
+    SendMessage(hwndPB, PBM_SETSTEP, (WPARAM) 1, 0);
+#endif
 
     /* positions above diagonal */
+#if WIN32
+    dlgprintf(127, "Calculating positions above diagonal." );
+#endif
 
     for( i = 0; i < n; i++ ) {
       for( j = 0; j <= i; j++, ++iPos ) {
@@ -1209,12 +1358,19 @@ generate_ts ( const int nTSP, const int nTSC,
         XhashAdd ( &h, ( i - j ) * n + j, asiEquity, fCubeful ? 8 : 2 );
 
       }
-      
+#if WIN32
+      SendMessage(hwndPB, PBM_STEPIT, 0, 0);
+#else
       fprintf( stderr, "%d/%d     \r", iPos, n * n );
-
+#endif
     }
 
     /* positions below diagonal */
+#if WIN32
+    dlgprintf(127, "Calculating positions below diagonal." );
+    SendMessage(hwndPB, PBM_SETRANGE, 0, MAKELPARAM(0, n ));
+    SendMessage(hwndPB, PBM_SETSTEP, (WPARAM) 1, 0);
+#endif
 
     for( i = 0; i < n; i++ ) {
       for( j = i + 1; j < n; j++, ++iPos ) {
@@ -1228,13 +1384,18 @@ generate_ts ( const int nTSP, const int nTSC,
         XhashAdd ( &h, ( i + n - j ) * n + j, asiEquity, fCubeful ? 8 : 2 );
         
       }
-      
+#if WIN32
+      SendMessage(hwndPB, PBM_STEPIT, 0, 0);
+#else
       fprintf( stderr, "%d/%d     \r", iPos, n * n );
-      
+#endif
     }
 
+#if !WIN32
     putc ( '\n', stderr );
-    
+#else
+    dlgprintf(127, "Clearing xhash." );
+#endif
     XhashStatus ( &h );
     
     XhashDestroy ( &h );
@@ -1246,8 +1407,13 @@ generate_ts ( const int nTSP, const int nTSC,
        479       789 
 
     */
+#if WIN32
+    dlgprintf(127, "Sorting file." );
+    SendMessage(hwndPB, PBM_SETRANGE, 0, MAKELPARAM(0, n ));
+    SendMessage(hwndPB, PBM_SETSTEP, (WPARAM) 1, 0);
+#endif
 
-    for ( i = 0; i < n; ++i ) 
+    for ( i = 0; i < n; ++i ){ 
       for ( j = 0; j < n; ++j ) {
 
         k = CalcPosition ( i, j, n );
@@ -1255,9 +1421,16 @@ generate_ts ( const int nTSP, const int nTSC,
         fseek ( pfTmp, ( fCubeful ? 8 : 2 ) * k, SEEK_SET );
         fread ( ac, 1, fCubeful ? 8 : 2, pfTmp );
         fwrite ( ac, 1, fCubeful ? 8 : 2, output );
-
       }
+#if WIN32
+      SendMessage(hwndPB, PBM_STEPIT, 0, 0);
+#endif
 
+    }
+
+#if WIN32
+    dlgprintf(127, "Closing and unlinking." );
+#endif
     fclose ( pfTmp );
 
     unlink ( szTmp ); 
@@ -1302,7 +1475,7 @@ usage ( char *arg0 ) {
 static void
 version ( void ) {
 
-  printf ( "makebearoff $Revision: 1.27 $\n" );
+  printf ( "makebearoff $Revision: 1.28 $\n" );
 
 }
 
@@ -1323,6 +1496,29 @@ extern int main( int argc, char **argv ) {
   FILE *output = stdout;
   char *szOutput = NULL;
   double r;
+#if WIN32
+  int i;
+  char *aszOS[] = {"Number of points:",
+		 "Number of chequers:",
+		 "Number of positions:",
+		 "Approximate by normal distribution:",
+		 "Include gammon distributions:",
+		 "Use compression scheme:",
+		 "Write header:",
+		 "Size of cache:",
+		 "Reuse old bearoff database:"};
+		 
+  char *aszTS[]= { "Number of points:", 
+                "Number of chequers:",
+                "Calculate equities:",
+                "Write header:",
+                "Number of one-sided positions:",
+                "Total number of positions:",
+                "Size of resulting file:",
+                "Size of xhash:",
+                "Reuse old bearoff database:",
+                " ", " "};
+#endif
 
   static struct option ao[] = {
     { "two-sided", required_argument, NULL, 't' },
@@ -1403,12 +1599,28 @@ extern int main( int argc, char **argv ) {
   if ( nOS ) {
 
     if ( nOS > 18 ) {
-      fprintf ( stderr, 
-                _("Size of one-sided bearoff database must be between "
+      dsplerr (  _("Size of one-sided bearoff database must be between "
                   "0 and 18\n") );
       exit ( 2 );
     }
-
+#if WIN32 
+    hdlg = CreateDialog(NULL, MAKEINTRESOURCE (DLG_MAKEBEAROFF), NULL, DlgProc);
+    /* error if NULL */
+    for (i = 0; i < 9; i++)
+       SendDlgItemMessage(hdlg, 101 + i, WM_SETTEXT, 0, (LPARAM) aszOS[i]);
+      
+    dlgprintf( 116, "%d", nOS);
+    dlgprintf( 117, "%d", 15); 
+    dlgprintf( 118, "%d", Combination ( nOS + 15, nOS ));
+    dlgprintf( 119, "%s", fND ? "yes" : "no");
+    dlgprintf( 120, "%s", fGammon ? "yes" : "no"); 
+    dlgprintf( 121, "%s", fCompress ? "yes" : "no"); 
+    dlgprintf( 122, "%s", fHeader ? "yes" : "no");
+    dlgprintf( 123, "%d", nHashSize);
+    dlgprintf( 124, "%s", szOldBearoff ? "yes" : "no");
+    dlgprintf(130, "Generating one-sided bearoff database. Please wait." );
+    dlgprintf(131, "makebearoff $Revision: 1.27$" );
+#else
     fprintf ( stderr, 
               _("One-sided database:\n"
                 "Number of points                  : %12d\n"
@@ -1430,30 +1642,47 @@ extern int main( int argc, char **argv ) {
               nHashSize,
               szOldBearoff ? "yes" : "no",
               szOldBearoff ? szOldBearoff : "" );
+#endif
 
     if ( fND ) {
       r = Combination ( nOS + 15, nOS ) * 16.0;
+#if WIN32
+      dlgprintf(110, "Size of database:");
+      dlgprintf(111, "");
+      dlgprintf(125, "%.0f (%.1f MB)", r, r / 1048576.0);
+      dlgprintf(126, "");
+#else
       fprintf ( stderr, 
                 _("Size of database                  : %.0f (%.1f MB)\n"), 
                 r, r / 1048576.0 );
+#endif
     }
     else {
       r = Combination ( nOS + 15, nOS ) * ( fGammon ? 128.0f : 64.0f );
+#if WIN32
+      dlgprintf(110, "Size of database (uncompressed):");
+      dlgprintf(125, "%.0f (%.1f MB)", r, r / 1048576.0);
+#else
       fprintf ( stderr, 
                 _("Size of database (uncompressed)   : %.0f (%.1f MB)\n"), 
                 r, r / 1048576.0 );
+#endif
       if ( fCompress ) {
         r = Combination ( nOS + 15, nOS ) * ( fGammon ? 32.0f : 16.0f );
+#if WIN32
+        dlgprintf(111, "Estimated size of compressed db:");
+        dlgprintf(126, "%.0f (%.1f MB)", r, r / 1048576.0);
+#else
         fprintf ( stderr, 
                   _("Estimated size of compressed db   : %.0f (%.1f MB)\n"), 
                   r, r / 1048576.0 );
+#endif
       }
     }
 
     if ( szOldBearoff &&
          ! ( pbc = BearoffInit ( szOldBearoff, NULL, BO_NONE, NULL ) ) ) {
-      fprintf ( stderr, 
-                _("Error initialising old bearoff database!\n" ) );
+      dsplerr ( _("Error initialising old bearoff database!\n" ) );
       exit( 2 );
     }
 
@@ -1463,8 +1692,7 @@ extern int main( int argc, char **argv ) {
     if ( pbc && 
          ( pbc->bt != BEAROFF_ONESIDED || pbc->fND != fND || 
            pbc->fGammon < fGammon ) ) {
-      fprintf ( stderr,
-                _("The old database is not of the same kind as the"
+      dsplerr ( _("The old database is not of the same kind as the"
                   " requested database\n") );
       exit( 2 );
     }
@@ -1477,14 +1705,17 @@ extern int main( int argc, char **argv ) {
     }
 
     if ( pbc ) {
+#if !WIN32
       fprintf ( stderr, "Number of reads in old database: %lu\n",
                 pbc->nReads );
+#endif
       BearoffClose ( &pbc );
     }
 
+#if !WIN32
     fprintf ( stderr, "Number of re-reads while generating: %ld\n", 
               cLookup );
-
+#endif
   }
   
   /*
@@ -1497,6 +1728,27 @@ extern int main( int argc, char **argv ) {
 
     r = n;
     r = r * r * ( fCubeful ? 8.0 : 2.0 );
+#if WIN32 
+    hdlg = CreateDialog(NULL, MAKEINTRESOURCE (DLG_MAKEBEAROFF), NULL, DlgProc);
+    /* error if NULL */
+    for (i = 0; i < 11; i++)
+       SendDlgItemMessage(hdlg, 101 + i, WM_SETTEXT, 0, (LPARAM) aszTS[i]);
+      
+    dlgprintf(116, "%d", nTSP);
+    dlgprintf(117, "%d", nTSC);
+    dlgprintf(118, "%s", 
+	fCubeful ? _("cubeless and cubeful") : _("cubeless only"));
+    dlgprintf(119, "%s",  fHeader ? _("yes") : ("no"));
+    dlgprintf(120, "%d",  n);
+    dlgprintf(121, "%d",  n * n);
+    dlgprintf(122, "%.0f bytes (%.1f MB)", r, r / 1048576.0);
+    dlgprintf(123, "%d bytes",  nHashSize);
+    dlgprintf(124, "%s",  szOldBearoff ? szOldBearoff : "No" );
+    dlgprintf(125, "" );
+    dlgprintf(126, "" );
+    dlgprintf(130, "Generating two-sided bearoff database. Please wait." );
+    dlgprintf(131, "makebearoff $Revision: 1.27$" );
+#else 
     fprintf ( stderr,
               _("Two-sided database:\n"
                 "Number of points             : %12d\n"
@@ -1506,7 +1758,7 @@ extern int main( int argc, char **argv ) {
                 "Number of one-sided positions: %12d\n"
                 "Total number of positions    : %12d\n"
                 "Size of resulting file       : %.0f bytes (%.1f MB)\n"
-                "Size of xhash                 : %12d bytes\n"
+                "Size of xhash                : %12d bytes\n"
                 "Reuse old bearoff database   : %s %s\n"),
               nTSP, nTSC,
               fCubeful ? _("cubeless and cubeful") : _("cubeless only"),
@@ -1517,13 +1769,14 @@ extern int main( int argc, char **argv ) {
               nHashSize,
               szOldBearoff ? "yes" : "no",
               szOldBearoff ? szOldBearoff : "" );
-
+#endif
     /* initialise old bearoff database */
-
+#if WIN32
+    dlgprintf(127, "Initialising old bearoff database." );
+#endif
     if ( szOldBearoff &&
          ! ( pbc = BearoffInit ( szOldBearoff, NULL, BO_NONE, NULL ) ) ) {
-      fprintf ( stderr, 
-                _("Error initialising old bearoff database!\n" ) );
+      dsplerr ( _("Error initialising old bearoff database!\n" ) );
       exit( 2 );
     }
     
@@ -1531,8 +1784,7 @@ extern int main( int argc, char **argv ) {
        database */
     
     if ( pbc && ( pbc->bt != BEAROFF_TWOSIDED || pbc->fCubeful != fCubeful ) ) {
-      fprintf ( stderr,
-                _("The old database is not of the same kind as the"
+      dsplerr ( _("The old database is not of the same kind as the"
                   " requested database\n") );
       exit( 2 );
     }
@@ -1542,18 +1794,23 @@ extern int main( int argc, char **argv ) {
     /* close old bearoff database */
 
     if ( pbc ) {
+#if !WIN32
       fprintf ( stderr, "Number of reads in old database: %lu\n",
                 pbc->nReads );
+#endif
       BearoffClose ( &pbc );
     }
-
+#if !WIN32
     fprintf ( stderr, "Number of re-reads while generating: %ld\n", 
               cLookup );
+#endif
 
   }
 
   fclose ( output );
-      
+#if WIN32
+  EndDialog(hdlg, 0);
+#endif
   return 0;
 
 }
@@ -1565,3 +1822,29 @@ BearoffInitBuiltin ( void ) {
   return NULL;
 
 }
+
+#if WIN32
+BOOL CALLBACK
+DlgProc (HWND hwnd, UINT Message, WPARAM wParam, LPARAM lParam){
+  
+   switch (Message)
+   {
+   case WM_INITDIALOG:
+	   return TRUE;
+
+   case WM_COMMAND:
+	switch ( LOWORD(wParam) )
+	{
+	case IDCANCEL:
+           CancelPressed = TRUE;		
+	   EndDialog(hwnd, 0);
+	   exit(2);
+	   return TRUE;
+	}
+	break;
+   }
+   return FALSE;
+}
+#endif
+
+	   
